Make code a bit cleaner

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -381,6 +381,7 @@
       </div>
 
       <div class="hero">
+        <!-- New releases Section -->
         <div class="new-releases-section">
           <div class="new-releases-title-box">
             <h3 class="new-releases-title no-margin">New Releases</h3>
@@ -609,11 +610,13 @@
           </ul>
         </div>
 
-        <div class="playlists-section">
-          <div class="playlists-title-box">
-            <div class="playlists-title no-margin">
+        <!-- Recently played content Section -->
+
+        <div class="rpc-section">
+          <div class="rpc-title-box">
+            <div class="rpc-title no-margin">
               <p class="no-margin">Recently Played:</p>
-              <ul class="recently-played-list">
+              <ul class="rpc-title-list">
                 <li class="yellow">Playlists</li>
                 <li class="small-vertical-line"></li>
                 <li class="gray">Songs</li>
@@ -635,153 +638,134 @@
               />
             </div>
           </div>
-          <div class="playlists-container">
-            <ul class="new-releases-list no-margin">
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/структура-щастя_playlist.png"
-                  alt="song-cover-8"
-                />
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">СТРУКТУРА ЩАСТЯ</p>
-                </div>
+          <ul class="rpc-list">
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;29 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                СТРУКТУРА ЩАСТЯ
+              </p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/melody_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;29 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">Melody</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/melody_playlist.png"
+                alt="melody_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;45 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">Melody</p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/ЦЙШЩНР_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;45 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">ЙЦШЩНРШКРЙЩША</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;25 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                ЙЦШЩНРШКРЙЩША
+              </p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/all-out-2010s_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;25 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">All Out 2010s</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/all-out-2010s_playlist.png"
+                alt="all-out-2010s_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;208 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                All Out 2010s
+              </p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/пігулки_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;208 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">Пігулки від голови</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/пігулки_playlist.png"
+                alt="пігулки_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;25 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                Пігулки від голови
+              </p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/постпанк_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;25 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">Пост-Панк</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/постпанк_playlist.png"
+                alt="постпанк_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;66 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                Пост-Панк
+              </p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/phonk_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;66 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">emo rap (temp playlist)</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/emo rap_playlist.png"
+                alt="emo rap_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;14 songs
-                  </p>
-                </div>
-              </li>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                emo rap (temp playlist)
+              </p>
 
-              <li class="new-release-box">
-                <img
-                  class="new-release-cover"
-                  src="/assets/images/png/eyedress_playlist.png"
-                  alt="song-cover-8"
-                />
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;14 songs
+              </p>
+            </li>
 
-                <div class="new-release-title-box">
-                  <p class="song-title no-margin">Eyedress</p>
-                </div>
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/eyedress_playlist.png"
+                alt="eyedress_playlist"
+              />
 
-                <div class="new-release-author-box">
-                  <p class="no-margin author-playlist">
-                    aksond1&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </li>
-            </ul>
-          </div>
+              <p class="rpc-playlist-title playlist-title no-margin">
+                Eyedress
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;20 songs
+              </p>
+            </li>
+          </ul>
         </div>
 
         <div class="playlists-section">
