Add the Categories section (vibes, genres, activities options)

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -768,13 +768,67 @@
           </ul>
         </div>
 
-        <div class="playlists-section">
-          <p class="playlists-title-box no-margin">Recommended Songs</p>
-          <div class="playlists-container">content</div>
+        <!-- Categories Section -->
+
+        <div class="categories-section">
+          <div class="categories-title-box">
+            <h3 class="no-margin">
+              <span class="closed-category-title gray">Vibes</span>
+              &nbsp;Genres&nbsp;
+              <span class="closed-category-title gray">Activities</span>
+            </h3>
+
+            <div class="sort-categories">
+              <p class="no-margin">
+                Sort by: <span class="bold">Popularity</span>
+              </p>
+
+              <img
+                class="sort-categories-down-button"
+                src="/assets/images/svg/down.svg"
+                alt="down-button"
+              />
+            </div>
+          </div>
+
+          <div class="categories-groups">
+            <ul class="categories-group1-list">
+              <li>Pop</li>
+              <li class="selected-genre">Rock</li>
+              <li>Hip-hop / Rap</li>
+              <li>R&B</li>
+              <li>Electronic / EDM</li>
+              <li>Dance</li>
+              <li>Jazz</li>
+              <li>Blues</li>
+            </ul>
+
+            <ul class="categories-group2-list">
+              <li>Country</li>
+              <li>Classical</li>
+              <li>Regae</li>
+              <li>Metal</li>
+              <li>Punk</li>
+              <li>Soul</li>
+              <li>Funk</li>
+              <li>Indie</li>
+            </ul>
+
+            <ul class="categories-group3-list">
+              <li>Alternative</li>
+              <li>Folk</li>
+              <li>Latin</li>
+              <li>Disco</li>
+              <li>House</li>
+              <li>Techno</li>
+              <li>Trance</li>
+              <li class="view-all-categories">View all (1278)</li>
+            </ul>
+          </div>
         </div>
 
         <div class="playlists-section">
-          <p class="playlists-title-box no-margin">Genres ("the root")</p>
+          <p class="playlists-title-box no-margin">Recommendations</p>
           <div class="playlists-container">content</div>
         </div>
 
