Change the New Releases section a bit

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -407,21 +407,25 @@
                 alt="song-cover-8"
               />
 
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">я (не) врятую тебе ...</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/png/апатія.png"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Апатія</p>
-                  <p class="new-release-author-info no-margin">
-                    114.3K followers&nbsp; • &nbsp;29 songs
+              <div class="new-release-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">
+                    я (не) врятую тебе від самотності
                   </p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/png/апатія.png"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">Апатія</p>
+                    <p class="new-release-author-info no-margin">
+                      114.3K followers&nbsp; • &nbsp;29 songs
+                    </p>
+                  </div>
                 </div>
               </div>
             </li>
@@ -433,21 +437,23 @@
                 alt="song-cover-8"
               />
 
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Лесбіянство (не) ...</p>
-              </div>
+              <div class="new-release-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Лесбіянство (не) модно</p>
+                </div>
 
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon.jpeg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">СТРУКТУРА ...</p>
-                  <p class="new-release-author-info no-margin">
-                    118.4K followers&nbsp; • &nbsp;42 songs
-                  </p>
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/jpg/author-icon.jpeg"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">СТРУКТУРА ...</p>
+                    <p class="new-release-author-info no-margin">
+                      118.4K followers&nbsp; • &nbsp;42 songs
+                    </p>
+                  </div>
                 </div>
               </div>
             </li>
@@ -459,21 +465,23 @@
                 alt="song-cover-8"
               />
 
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Наяву</p>
-              </div>
+              <div class="new-release-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Наяву</p>
+                </div>
 
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/png/sadsvit.png"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Sadsvit</p>
-                  <p class="new-release-author-info no-margin">
-                    435.7K followers&nbsp; • &nbsp;40 songs
-                  </p>
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/png/sadsvit.png"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">Sadsvit</p>
+                    <p class="new-release-author-info no-margin">
+                      435.7K followers&nbsp; • &nbsp;40 songs
+                    </p>
+                  </div>
                 </div>
               </div>
             </li>
@@ -485,21 +493,23 @@
                 alt="song-cover-8"
               />
 
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">oulala</p>
-              </div>
+              <div class="new-release-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">oulala</p>
+                </div>
 
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/png/copycat.png"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Copycat</p>
-                  <p class="new-release-author-info no-margin">
-                    3.2K followers&nbsp; • &nbsp;7 songs
-                  </p>
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/png/copycat.png"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">Copycat</p>
+                    <p class="new-release-author-info no-margin">
+                      3.2K followers&nbsp; • &nbsp;7 songs
+                    </p>
+                  </div>
                 </div>
               </div>
             </li>
@@ -511,99 +521,23 @@
                 alt="song-cover-8"
               />
 
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">це не сильно ...</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/png/хейтспіч.png"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">хейтспіч</p>
-                  <p class="new-release-author-info no-margin">
-                    77.9K followers&nbsp; • &nbsp;31 songs
-                  </p>
+              <div class="new-release-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">це не сильно ...</p>
                 </div>
-              </div>
-            </li>
 
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-6.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Breach</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/png/21-pilots.png"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Twenty One ...</p>
-                  <p class="new-release-author-info no-margin">
-                    25.7M followers&nbsp; • &nbsp;87 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
-                  <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/png/deslocado.png"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Deslocado</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/png/napa.png"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">NAPA</p>
-                  <p class="new-release-author-info no-margin">
-                    104.1K followers&nbsp; • &nbsp;29 songs
-                  </p>
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/png/хейтспіч.png"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">хейтспіч</p>
+                    <p class="new-release-author-info no-margin">
+                      77.9K followers&nbsp; • &nbsp;31 songs
+                    </p>
+                  </div>
                 </div>
               </div>
             </li>
@@ -801,17 +735,6 @@
               <li>Dance</li>
               <li>Jazz</li>
               <li>Blues</li>
-            </ul>
-
-            <ul class="categories-group2-list">
-              <li>Country</li>
-              <li>Classical</li>
-              <li>Regae</li>
-              <li>Metal</li>
-              <li>Punk</li>
-              <li>Soul</li>
-              <li>Funk</li>
-              <li>Indie</li>
             </ul>
 
             <ul class="categories-group3-list">
