Edit the New Releases section

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -386,18 +386,11 @@
           <div class="new-releases-title-box">
             <h3 class="new-releases-title no-margin">New Releases</h3>
 
-            <div class="turn-pages-buttons">
-              <img
-                class="previous-button"
-                src="/assets/images/svg/previous-button.svg"
-                alt="previous-button"
-              />
-              <img
-                class="next-button"
-                src="/assets/images/svg/next-button.svg"
-                alt="next-button"
-              />
-            </div>
+            <img
+              class="options-button"
+              src="/assets/images/svg/3dots-vertical.svg"
+              alt="options"
+            />
           </div>
           <ul class="new-releases-list no-margin">
             <li class="new-release-box">
@@ -423,7 +416,7 @@
                   <div class="author-infobox">
                     <p class="no-margin">Апатія</p>
                     <p class="new-release-author-info no-margin">
-                      114.3K followers&nbsp; • &nbsp;29 songs
+                      114.3K followers
                     </p>
                   </div>
                 </div>
@@ -451,7 +444,7 @@
                   <div class="author-infobox">
                     <p class="no-margin">СТРУКТУРА ...</p>
                     <p class="new-release-author-info no-margin">
-                      118.4K followers&nbsp; • &nbsp;42 songs
+                      118.4K followers
                     </p>
                   </div>
                 </div>
@@ -479,7 +472,7 @@
                   <div class="author-infobox">
                     <p class="no-margin">Sadsvit</p>
                     <p class="new-release-author-info no-margin">
-                      435.7K followers&nbsp; • &nbsp;40 songs
+                      435.7K followers
                     </p>
                   </div>
                 </div>
@@ -507,7 +500,7 @@
                   <div class="author-infobox">
                     <p class="no-margin">Copycat</p>
                     <p class="new-release-author-info no-margin">
-                      3.2K followers&nbsp; • &nbsp;7 songs
+                      3.2K followers
                     </p>
                   </div>
                 </div>
@@ -523,7 +516,7 @@
 
               <div class="new-release-infobox">
                 <div class="new-release-title-box">
-                  <p class="song-title no-margin">це не сильно ...</p>
+                  <p class="song-title no-margin">це не сильно радикально?</p>
                 </div>
 
                 <div class="new-release-author-box">
@@ -535,12 +528,14 @@
                   <div class="author-infobox">
                     <p class="no-margin">хейтспіч</p>
                     <p class="new-release-author-info no-margin">
-                      77.9K followers&nbsp; • &nbsp;31 songs
+                      77.9K followers
                     </p>
                   </div>
                 </div>
               </div>
             </li>
+
+            <li class="new-releases-scroll-buttons">unknown area</li>
           </ul>
         </div>
 
