Add a category-choosed-option layout
I took a Rock as an example.

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -732,7 +732,7 @@
               <li>Blues</li>
             </ul>
 
-            <ul class="categories-group3-list">
+            <ul class="categories-group2-list">
               <li>Alternative</li>
               <li>Folk</li>
               <li>Latin</li>
@@ -742,6 +742,17 @@
               <li>Trance</li>
               <li class="view-all-categories">View all (1278)</li>
             </ul>
+          </div>
+
+          <div class="rock-section">
+            <div class="rock-songs">
+              recommended songs ( scroll area with songs)
+            </div>
+            <div class="rock-rpa">
+              <div class="rock-new-releases">new releases</div>
+              <div class="rock-playlists">playlists</div>
+              <div class="rock-artists">artists</div>
+            </div>
           </div>
         </div>
 
