--- a/source/html/index.html
+++ b/source/html/index.html
@@ -756,14 +756,163 @@
           </div>
         </div>
 
-        <div class="playlists-section">
-          <p class="playlists-title-box no-margin">Recommendations</p>
-          <div class="playlists-container">content</div>
+        <div class="rpc-section">
+          <div class="rpc-title-box">
+            <div class="rpc-title no-margin">
+              <p class="no-margin">Recommendations</p>
+            </div>
+
+            <div class="turn-pages-buttons">
+              <img
+                class="previous-button"
+                src="/assets/images/svg/previous-button.svg"
+                alt="previous-button"
+              />
+              <img
+                class="next-button"
+                src="/assets/images/svg/next-button.svg"
+                alt="next-button"
+              />
+            </div>
+          </div>
+
+          <ul class="rpc-list">
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="структура-щастя_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                СТРУКТУРА ЩАСТЯ
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;29 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/melody_playlist.png"
+                alt="melody_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">Melody</p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;45 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                ЙЦШЩНРШКРЙЩША
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;25 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/all-out-2010s_playlist.png"
+                alt="all-out-2010s_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                All Out 2010s
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;208 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/пігулки_playlist.png"
+                alt="пігулки_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                Пігулки від голови
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;25 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/постпанк_playlist.png"
+                alt="постпанк_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                Пост-Панк
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;66 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/emo rap_playlist.png"
+                alt="emo rap_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                emo rap (temp playlist)
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;14 songs
+              </p>
+            </li>
+
+            <li class="rpc-box">
+              <img
+                class="rpc-cover"
+                src="/assets/images/png/eyedress_playlist.png"
+                alt="eyedress_playlist"
+              />
+
+              <p class="rpc-playlist-title playlist-title no-margin">
+                Eyedress
+              </p>
+
+              <p class="rpc-author-box author-playlist no-margin">
+                aksond1&nbsp; • &nbsp;20 songs
+              </p>
+            </li>
+          </ul>
         </div>
 
         <div class="playlists-section">
           <p class="playlists-title-box no-margin">Most Listened Artists</p>
-          <div class="playlists-container">content</div>
+          <div class="items-container">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+          </div>
         </div>
 
         <div class="playlists-section">
